--- a/ChangeLog
+++ b/ChangeLog
@@ -3,5 +3,5 @@ version      date  description
 2.0      07/13/09  Various bugs fixed; R2 plot implemented
 2.1      09/14/09  Implemented sparse matrix improvements
 3.0      04/29/11  Various functionalities added
-3.1      xx/xx/xx  More functionalities added
+3.1      08/22/11  More functionalities added
 
