--- a/inst/doc/mediation.Rnw
+++ b/inst/doc/mediation.Rnw
@@ -1575,8 +1575,6 @@ science research in several critical directions.
 
 \clearpage
 \pdfbookmark[1]{References}{References}
-%\bibliography{my,imai,../../../paper/keele_revised2,../../../paper/TingleyBib}
-
-\input{mediation.bbl}
+\bibliography{mediation}
 
 \end{document}
