--- a/ChangeLog
+++ b/ChangeLog
@@ -9,4 +9,4 @@ version      date  description
 3.1.3	 11/21/11  Import inconsistency with Matrix fixed
 4.0      03/20/12  Design and multimed functions added, along with other new features
 4.0.1    04/20/12  Bug in mediate.ced fixed, along with new example data 
-
+4.1      XX/XX/12  multimed for parallel design; fixed typos in summary outputs
