--- a/vignettes/mediation.Rnw
+++ b/vignettes/mediation.Rnw
@@ -99,13 +99,12 @@ pdfstartview=FitH, breaklinks=true, urlbordercolor={0 1 0}, citebordercolor={0 0
 
 \if0\blind
 
-{\title{\bf \tit\thanks{This paper is an updated version of the tutorial
-    for package {\bf mediation} which was previously published in an edited
-    volume: \citet{imai:etal:10}.
-    The description is based on {\bf version 3.1} of {\bf mediation} and included as
-    the package's vignette. A new tutorial including the features added in version
-    4.0 or later is currently in preparation and will be added as soon as it is ready.
-    Financial support from the National Science Foundation
+{\title{\bf \tit\thanks{This is an {\bf \color{red} old} vignette for the {\bf mediation} package,
+	which itself is an updated version of the tutorial originally published in 
+	an edited \citep{imai:etal:10}. The description is based on {\bf version 3.1} 
+	of {\bf mediation} and {\bf \color{red} does not accurately describe the most current version}. 
+	For the most up-to-date tutorial type {\tt vignette("mediationR2")} to read the
+	new vignette. Financial support from the National Science Foundation
     (SES-0752050) is acknowledged.}}
 
   \author{Kosuke Imai\thanks{Assistant Professor, Department of
