--- a/ChangeLog
+++ b/ChangeLog
@@ -10,3 +10,4 @@ version      date  description
 4.0      03/20/12  Design and multimed functions added, along with other new features
 4.0.1    04/20/12  Bug in mediate.ced fixed, along with new example data 
 4.1      05/31/12  multimed for parallel design; fixed typos in summary outputs
+4.1.1    08/23/12  But in p-value computation fixed
